Fixed data types. Added try_quick_put method via item name to container blocks and has_item method to robo. Fixed the range of container block interactions.